tests/sqlite/ui-common/section_in_map_missing_sql.stderr
error: sql_forge!: section `#filter` is declared in the section map but `{#filter}` never appears in the SQL
 --> tests/sqlite/tmp-ui/section_in_map_missing_sql.rs:9:9
  |
9 |         "SELECT id, name FROM users",
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
